--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" *ngIf="router.url == '/home'">
+<mat-toolbar color="primary" *ngIf="router == '/home'">
   <h1>
     My Angular Store
   </h1>
