--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center h-100">
+<div class="d-flex align-items-center h-100" style="background-image: url('./assets/cool-background.png')">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-5">
