--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary" *ngIf="router == '/home'">
+<mat-toolbar color="primary" *ngIf="isHome">
   <h1>
-    My Angular Store
+    COVID-19 India
   </h1>
-  <button mat-button routerLink="/">Home</button>
+  <button mat-button routerLink="/home" class="float-right">Home</button>
 </mat-toolbar><router-outlet></router-outlet>
