--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ html, body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 button:focus {
@@ -18,4 +18,19 @@ a:hover {
 
 .spacer {
   flex: 1 1 auto;
+}
+.bg-danger{
+  background-color: #ff1744 !important;
+}
+
+.bg-success{
+  background-color: #66bb6a !important;
+}
+
+.bg-info{
+  background-color: #03a9f4 !important;
+}
+
+.bg-warning{
+  background-color: #ffa000 !important;
 }
